<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DetailActivity">

        <Button
            android:id="@+id/favorite_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="changeFavorite" />

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_rating"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_videos"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/trailers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/reviews_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


    </LinearLayout>
</ScrollView>